[refactor] 팀 전체 조회 페이징 추가 , 랭킹 오류 수정